@@ -11,6 +11,7 @@ umockdev_testbed_set_attribute
 umockdev_testbed_set_attribute_int
 umockdev_testbed_set_attribute_hex
 umockdev_testbed_set_attribute_binary
+umockdev_testbed_set_attribute_link
 umockdev_testbed_set_property
 umockdev_testbed_set_property_int
 umockdev_testbed_set_property_hex
